--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -703,7 +703,7 @@ Error message and password prompt
 
 <li>Violences policières &amp; état fascisant</li>
 
-<li>vocabulaire désuet</li>
+<li>vocabulaire désuet / fun français</li>
 
 <li>voisins</li>
 
@@ -10195,7 +10195,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230214094824458" list="[[Quotes, citations]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230214094824458" title="$:/StoryList">
+<div created="20230217181843615" list="[[Books / livres]] [[online services, addons &amp; resources]] [[vocabulaire désuet / fun français]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230217191727075" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10249,11 +10249,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2144&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1206&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -10264,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230206143515453" title="$:/temp/search">
-<pre>quotes</pre>
+<div created="20190114084246125" modified="20230217191725132" title="$:/temp/search">
+<pre>books</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10664,8 +10664,12 @@ CECI EST UNE ALERTE BLAGUE NULLE DE NIVEAU 8. IL NE S'AGIT PAS D'UN EXERCICE.
 DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 </pre>
 </div>
-<div created="20190131165226977" modified="20220608120549546" tags="download core" title="Books / livres">
-<pre>* What Every Body is Saying - Joe Navarro (body language)
+<div created="20190131165226977" modified="20230217191845315" tags="download core" title="Books / livres">
+<pre>* Mathieu Marion : Ludwig Wittgenstein - Introduction au « Tractatus logico philosophicus »
+* carnets de wittgenstein 14-16
+* 6 personnages en quête d'auteur
+* ''Le Pendule De Foucault / Umberto Eco''
+* What Every Body is Saying - Joe Navarro (body language)
 * Jonathan Metzl - Étouffer la révolte / The Protest Psychosis
 * ''I Am a Strange Loop - Douglas Hofstadter'' https://en.wikipedia.org/wiki/I_Am_a_Strange_Loop
 * ''Andrew Lobaczewski - La ponérologie politique - étude de la genèse du mal, appliqué à des fins politiques''
@@ -15899,7 +15903,7 @@ Pour les aspects scientifiques de mon propos, qui le fondent et le justifient, l
 C'est en me fondant sur un puissant socle scientifique, historique, symbolique, que j'ai pu concevoir cette approche de la musculation.
 </pre>
 </div>
-<div created="20190322150105505" modified="20230206093748902" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20230217190733009" tags="improve core" title="online services, addons &amp; resources">
 <pre>! misc
 * ''git interactive tutorial'' https://learngitbranching.js.org/?locale=fr_FR
 * https://lew.la/ a collection of web tools
@@ -15907,6 +15911,8 @@ C'est en me fondant sur un puissant socle scientifique, historique, symbolique, 
 * image editor https://pixlr.com/fr/x/#editor
 * text obfuscator https://obfuscator.uo1.net/
 * retrouver un caractère unicode/UTF8 à partir d'un croquis https://shapecatcher.com/
+* ''schema design https://excalidraw.com/''
+* enregistrement message vocal https://vocaroo.com/
 
 ! sub
 * https://www.sous-titres.eu/
@@ -20297,7 +20303,7 @@ Le pire, c'est que je m'estime heureux que c'en soit resté là.
 Je m'estime heureux !
 Ce pays est fucked up.</pre>
 </div>
-<div created="20201202125558837" modified="20230125094239470" tags="communication" title="vocabulaire désuet">
+<div created="20201202125558837" modified="20230217181854536" tags="communication" title="vocabulaire désuet / fun français">
 <pre>* fifrelin
 * margoulin
 * balivernes
@@ -20338,14 +20344,20 @@ Ce pays est fucked up.</pre>
 * obséquieux
 * attrayant
 * bonhomie
+* maroufler
 
-! 
+! expressions n'existant pas
 * Souquez les artimuses 
 * Escartelez le paltoquet
 * Carguez les entrimonts
 * Choquez les estinguettes
 * Balarguez vos calbutes
 * Mastardez les brébancourts
+
+! expressions mélangées
+* je crache pas sur l'ambulance
+* décrocher des montagnes
+* déplacer la lune
 </pre>
 </div>
 <div created="20211109092746572" modified="20211109092848246" tags="" title="voisins">
