--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10195,7 +10195,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230217181843615" list="[[Books / livres]] [[online services, addons &amp; resources]] [[vocabulaire désuet / fun français]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230217191727075" title="$:/StoryList">
+<div list="[[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10249,11 +10249,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;2144&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;1206&quot;
         }
     }
 }</pre>
@@ -10264,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230217191725132" title="$:/temp/search">
-<pre>books</pre>
+<div created="20190114084246125" modified="20230308075504803" title="$:/temp/search">
+<pre>sta</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -16965,7 +16965,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20230117162752879" tags="core" title="pw">
+<div created="20190130144059269" modified="20230310142558942" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17040,7 +17040,7 @@ bandai =&gt; bandai.s.lemoine@xoxy.net 9/18 /!\ PASSWORD : pas de carac spéciau
 caf.fr =&gt; caf.fr 1469221 / 06062016
 AON =&gt; aon.fr/sante https://monportailsante.aon.fr/aonadp/ 9872631 / 10/18 mais '=' remplacé par '+'
 http://www.mentalonews.com        mentalo.osef.osef@xoxy.net        11/18
-https://github.com/dashboard        lenopgm 12/18 / samuel-lemoine 3/21
+https://github.com/dashboard        lenopgm 12/18 / samuel-lemoine 3/21 / samuelemoine 3+/23 (ausyfr)
 macif          13229934 12/18
 epicgames =&gt; epicgames.osef.osef@xoxy.net 7/19
 kickstarter =&gt; veiel.osef.osef@xoxy.net 8/19
@@ -19208,7 +19208,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20230206135334989" tags="" title="stand-up ideas">
+<div created="20220829090335038" modified="20230308081020269" tags="" title="stand-up ideas">
 <pre>* arrêter / allaiter
 * karité / qualité
 * (dé)serrer / seller
@@ -19232,6 +19232,9 @@ il m'a rendu son livre déchiré
                         ^livre titre &quot;Déchiré&quot;
 
 ```
+
+p'tit hippopotam t'as ma malle en lambeaux beaucoup cousent ze peut peut-être être ...
+p'tit hippopotam t'as menti en tirant 
 </pre>
 </div>
 <div created="20200717093101888" modified="20200722084901185" tags="" title="Statistiques ethniques USA">
