--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -138,6 +138,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/danielo515/2click2edit</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/github-fork-ribbon</li>
 
 <li>$:/config/RelinkOnRename</li>
@@ -213,6 +215,8 @@ Error message and password prompt
 <li>$:/state/folded/$:/ControlPanel</li>
 
 <li>$:/state/plugin-info--896887961-$:/core</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/danielo515/2click2edit</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/reidgould/dpbd</li>
 
@@ -303,6 +307,8 @@ Error message and password prompt
 <li>tid/Hk75nOn9s</li>
 
 <li>tid/Hki1aO2cj</li>
+
+<li>tid/HknGcumJn</li>
 
 <li>tid/rJDgndn9j</li>
 
@@ -451,6 +457,9 @@ Error message and password prompt
 </div>
 <div title="$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button">
 <pre>hide</pre>
+</div>
+<div created="20230306143959573" modified="20230306143959573" title="$:/config/Plugins/Disabled/$:/plugins/danielo515/2click2edit">
+<pre>yes</pre>
 </div>
 <div created="20230110141503205" modified="20230110141503205" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/github-fork-ribbon">
 <pre>yes</pre>
@@ -8703,9 +8712,8 @@ Error message and password prompt
 <div title="$:/core/ui/SideBar/Tools">
 <pre>Hide tab in SideBar. Delete this tiddler to restore.</pre>
 </div>
-<div created="20230110124959630" list="[[Dropboard for TiddlyWiki]] [[Drag n' Drop In Style]] [[My Task Board]] [[There's More!]] [[Example Boards]]" modified="20230116133212532" title="$:/DefaultTiddlers">
-<pre>&quot;prépa baptème&quot;
-&quot;home board&quot;
+<div created="20230110124959630" list="[[Dropboard for TiddlyWiki]] [[Drag n' Drop In Style]] [[My Task Board]] [[There's More!]] [[Example Boards]]" modified="20230306143409080" title="$:/DefaultTiddlers">
+<pre>&quot;home board&quot;
 leno</pre>
 </div>
 <div title="$:/favicon.ico" type="image/png">
@@ -9514,6 +9522,9 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110141613886" modified="20230110141617317" title="$:/state/plugin-info--896887961-$:/core">
 <pre>no</pre>
 </div>
+<div created="20230306143957717" modified="20230306143957717" title="$:/state/plugin-info--896887961-$:/plugins/danielo515/2click2edit">
+<pre>yes</pre>
+</div>
 <div created="20230110141624934" modified="20230110141628246" title="$:/state/plugin-info--896887961-$:/plugins/reidgould/dpbd">
 <pre>no</pre>
 </div>
@@ -9529,7 +9540,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110124503324" modified="20230110124503324" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
-<div created="20230110123819930" modified="20230110124942595" title="$:/state/tab--2112689675">
+<div created="20230110123819930" modified="20230306143325826" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20230110141527245" modified="20230110141529197" title="$:/state/tab--86143343">
@@ -9538,16 +9549,16 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110123822824" modified="20230110123830839" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20230110123831718" modified="20230110163427365" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20230110123831718" modified="20230306143952099" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20230110123925447" modified="20230126102720048" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Recent</pre>
+<div created="20230110123925447" modified="20230306143750258" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20230110123919368" modified="20230126102710578" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="[[prépa baptème]] [[home board]] leno" title="$:/StoryList">
+<div list="[[home board]] leno" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20230110124531602" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/edit $:/core/ui/Buttons/close" modified="20230110124531602" tags="rd_gld/prefs" title="$:/tags/ViewToolbar">
@@ -9740,13 +9751,13 @@ very-muted-foreground: #849ebb</pre>
 <div tags="rd_gld/prefs" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20230111181256170" modified="20230206082146571" shorttext="prépa maison Mars" tags="[[todo SAM]]" title="accueil bébé">
+<div created="20230111181256170" modified="20230306143431444" shorttext="prépa maison Mars" tags="done" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]] tid/SyJN_ERhj" modified="20230206082146570" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]]" modified="20230306143534943" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
-<div created="20230111103538724" modified="20230126102544064" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="[[en cours SAM]]" title="diac">
+<div created="20230111103538724" modified="20230306143534945" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="done" title="diac">
 <pre>* ~~smdc~~
 ** ~~02 40 31 50 74~~
 * ~~Renault Dacia Garage d'Herbauges Agent~~
@@ -9769,13 +9780,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="" modified="20230206082146571" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac" modified="20230306143534945" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230206082146570" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230306143534945" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="diac" modified="20230206082146570" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="" modified="20230306143534945" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9789,19 +9800,19 @@ very-muted-foreground: #849ebb</pre>
 * ControlPanel &quot;⛭&quot; &gt; Appearance Toolbars &gt; View Toolbar
 </pre>
 </div>
-<div created="20230111124336323" modified="20230111124403856" shorttext="familiale 7+ places" tags="TODO" title="familiale">
+<div created="20230111124336323" modified="20230306143846764" shorttext="''familiale 7+''" tags="TODO" title="familiale">
 <pre></pre>
 </div>
-<div created="20230110162941854" dpbd-displaytext="no" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230123152620719" tags="" title="home board">
+<div created="20230110162941854" dpbd-displaytext="no" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230306144010068" tags="" title="home board">
 <pre>&lt;$transclude tiddler=&quot;$:/plugins/reidgould/dpbd/templates/view/Board&quot; mode=&quot;inline&quot; /&gt;</pre>
 </div>
 <div created="20230111103633843" modified="20230112163456103" shorttext="isolation &amp; PAC" tags="[[todo JU]]" title="isolation &amp; citemetry">
 <pre>citemetry</pre>
 </div>
-<div created="20230111181107901" modified="20230111181150489" tags="" title="leno">
+<div created="20230111181107901" list="todo leno_done" modified="20230306143256708" tags="" title="leno">
 <pre>&lt;$transclude tiddler=&quot;$:/plugins/reidgould/dpbd/templates/view/Board&quot; mode=&quot;inline&quot; /&gt;</pre>
 </div>
-<div created="20230130080940171" list="tid/Hki1aO2cj tid/rkenhdh9i" modified="20230130081018106" tags="leno" title="leno_done">
+<div created="20230130080940171" dpbd-collapse_in="" list="tid/Hki1aO2cj tid/rkenhdh9i" modified="20230306143256708" tags="leno" title="leno_done">
 <pre></pre>
 </div>
 <div created="20230111103742222" modified="20230111103803283" shorttext="memorisation Emma" tags="TODO" title="memorisation">
@@ -9810,7 +9821,7 @@ very-muted-foreground: #849ebb</pre>
 <div caption="Tools" list-before="$:/core/ui/MoreSideBar/Plugins" tags="$:/tags/MoreSideBar" title="MoreSideBar/Tools">
 <pre>&lt;$transclude tiddler=&quot;$:/core&quot; subtiddler=&quot;$:/core/ui/SideBar/Tools&quot; /&gt;</pre>
 </div>
-<div created="20230111181226584" modified="20230117085138837" shorttext="Morlaix février" tags="TODO" title="morlaix">
+<div created="20230111181226584" modified="20230306143424846" shorttext="Morlaix février" tags="done" title="morlaix">
 <pre>* vacances zone B : 11 au 27 février
 * arrangement Touran (lili &amp; galou)</pre>
 </div>
@@ -9852,6 +9863,9 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181602780" modified="20230130081016025" shorttext="heroquest" tags="leno_done" title="tid/Hki1aO2cj">
 <pre></pre>
 </div>
+<div created="20230306143500255" modified="20230306143931077" shorttext="''MACIF / ZOE'' / achat batterie" tags="[[todo SAM]]" title="tid/HknGcumJn">
+<pre>ZOE / MACIF / achat batterie</pre>
+</div>
 <div created="20230111181158784" modified="20230111181209230" shorttext="unstash tao" tags="todo" title="tid/rJDgndn9j">
 <pre></pre>
 </div>
@@ -9867,7 +9881,7 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230112175327371" modified="20230112175338107" shorttext="BNP dez esprit libre" tags="backlog" title="tid/ryJXYT6cs">
 <pre></pre>
 </div>
-<div created="20230206081951338" modified="20230206081957626" shorttext="achat perceuse" tags="backlog" title="tid/SyJN_ERhj">
+<div created="20230206081951338" modified="20230306143441214" shorttext="achat perceuse" tags="done" title="tid/SyJN_ERhj">
 <pre></pre>
 </div>
 <div list="[[Any Tiddler can be a List or Card]] [[Drop Any Link (Including Titles)]] [[Drop 'Tag Pill' to Drop All Tagged]] [[Hold Shift for Horizontal Scroll]] [[Cleaning Up Temporary Data]] [[Warning: No Multiline Shorttext]] [[Warning: Don't Double Edit]] [[Warning: Board Removes Tags]] [[Warning: Don't Drop Selected Text]] [[Warning: Bug - Double Quotes in Titles]]" tags="[[User Guide Home]]" title="Tips">
@@ -9899,16 +9913,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale morlaix" modified="20230206082146570" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale" modified="20230306143534943" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
-<div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230130081035553" tags="leno" title="todo">
+<div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230306143256708" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230206082146570" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230306143534943" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]] [[accueil bébé]]" modified="20230206082146571" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230306143534943" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
