--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10195,7 +10195,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div list="[[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
+<div created="20230404164243502" list="[[Books / livres]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230404164435381" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10249,11 +10249,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2144&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1206&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -10264,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230308075504803" title="$:/temp/search">
-<pre>sta</pre>
+<div created="20190114084246125" modified="20230404164433935" title="$:/temp/search">
+<pre>book</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10664,7 +10664,7 @@ CECI EST UNE ALERTE BLAGUE NULLE DE NIVEAU 8. IL NE S'AGIT PAS D'UN EXERCICE.
 DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 </pre>
 </div>
-<div created="20190131165226977" modified="20230217191845315" tags="download core" title="Books / livres">
+<div created="20190131165226977" modified="20230404164521653" tags="download core" title="Books / livres">
 <pre>* Mathieu Marion : Ludwig Wittgenstein - Introduction au « Tractatus logico philosophicus »
 * carnets de wittgenstein 14-16
 * 6 personnages en quête d'auteur
@@ -10696,6 +10696,10 @@ DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 * ''Du pouvoir - Bertrand Jouvenel''
 * L'Histoire - Arnold Toybee
 * Je vois Satan tomber comme l'éclair - René Girard
+
+! Juan Branco
+* Voyage au bout de la nuit - Céline
+* Les misérables - Victor Hugo
 
 ! Loïc Finaz, sous-marinier Thinkerview
 * ''L'usage du monde - Nicolas Bouvier'' &gt; comprendre le monde
@@ -11826,7 +11830,7 @@ Conclusion : la confiance est très dure à mettre en place. Et quand elle est p
 ```
 </pre>
 </div>
-<div created="20200131132103939" modified="20221208124103003" tags="idea conscience" title="conscience - notes &amp; idées diverses">
+<div created="20200131132103939" modified="20230328161759432" tags="idea conscience" title="conscience - notes &amp; idées diverses">
 <pre>! test de ~Turing pour identifier une conscience
 Expérience de pensée (ou idée à mettre en place ?) pour mieux comprendre son rapport personnel à l'idée de conscience (phénomène émergent, singularité de source divine, ...?)
 L'idée est de comparer en regard &quot;boîte noire&quot; 2 (catégories d')entités :
@@ -11872,7 +11876,16 @@ l'intelligence est la capacité à traiter les inputs pour en tirer des conclusi
 ** fourmi = petite conscience indiv, humain = grande conscience indiv
 ** ensemble de trous rapprochés / en lien = macro-&quot;instance de conscience&quot; ? (ex: société humaine, colonie de fourmis...)
 * peut-il alors y avoir des consciences qui se recoupent ? (ex: j'ai conscience de moi, mais si ça se trouve certaines bactéries/cellules me composant ont une conscience individuelle limitée, ou bien notre société humaine a une conscience individuelle, ou encore un amas de galaxies a une conscience......)
-(voir aussi l'analogie vue ici ou là de la conscience divine comme masse océanique et les vagues comme consciences individuelles, émanant de cette conscience divine)</pre>
+(voir aussi l'analogie vue ici ou là de la conscience divine comme masse océanique et les vagues comme consciences individuelles, émanant de cette conscience divine)
+
+
+! Descarte
+*  &quot;la liberté (qui distingue l'animal) de l'homme lui vient de ce qu'il a une délibération intérieure&quot; (descartes by precepteur) &gt; la conscience naitrait-elle justement de cette délibération intérieure ?
+* si l'homme n'est pas libre mais déterminé (spinoza), qu'en est-il de Dieu ? 
+** soit il y a une métaphysique causale (supérieure) qui gouverne Dieu, et alors il est également déterminé et donc non-libre
+** soit il n'y a pas de telle métaphysique causale ? 
+*** hasard absolu ? 
+*** métaphysique non-causale ? à quoi ça ressemble ???</pre>
 </div>
 <div created="20190426093809319" modified="20190426094628236" tags="conscience" title="Conscience &amp; temps &amp; spi">
 <pre>* James Randi Zététicien	https://www.youtube.com/channel/UCufMEUXvtTGZ_twRq3HSQgg
@@ -13174,7 +13187,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * neutralisation
 * déviation</pre>
 </div>
-<div created="20221229210623979" modified="20230206135649388" tags="" title="fulgurances / épiphanies">
+<div created="20221229210623979" modified="20230403134559154" tags="" title="fulgurances / épiphanies">
 <pre>* le dollar n'est plus adossé à l'or mais à l'armée US
 * lors d'un échange/débat avec qqun &quot;qui pense mal&quot;, ne pas aboutir à le faire changer d'avis c'est le renforcer dans conviction en sa croyance
 * le capitalisme (entendu au sens de &quot;libre marché dérégulé&quot;) &quot;tend vers l'infini&quot; / tend naturellement à aller chercher les instincts les plus profonds de l'homme, puisque c'est ce qui fait le plus vendre : le neuro-marketing découle logiquement d'un marché dérégulé, et aboutit à un &quot;avilissement&quot; global de la société en appuyant &quot;là où ça marche&quot;, là où des millions d'années de pression évolutive ont préparé des chemins neuraux (besoin d'accumulation, reproduction (porno, sites de rencontre...)
@@ -13187,6 +13200,8 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ** aucun langage ne peut décrire complètement le réel
 ** le réel est inaccessible par le langage
 ** le réel (est) Dieu (parallèle / similitude / ...?)
+* le fait que les sens soient illusoires peut donner envie de se reposer sur la logique (cf cogito Descartien)
+** MAIS la sensation/croyance de logique est en soi une sensation : rien ne prouve que notre logique soit... logique
 
 
 &lt;&lt;&lt;
@@ -16515,7 +16530,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20230110090908516" tags="kids" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20230404164335764" tags="kids" title="Perçou kid talk Perceval">
 <pre>* a kapoté &gt;&gt;	le grain de beauté
 * a kakopel &gt;&gt;	le tractopelle
 * akatola &gt;&gt;	chocolat
@@ -16575,6 +16590,8 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * NON c'est PAS VRAI ! Parce que sinon j'te ''tappe la paix'' !
 * non &quot;des gallinacées&quot; c'est pas un oiseau ! dégalinasser ça veut dire danser !! (dans &quot;Rock 'n roll des gallinacées =&gt; rock n roll dégalinacez)
 * (parlant d'un ondamania) &quot;si tu m'le donne on dira que ça sera ''ma cordéon''&quot; (m'accordéon)
+* &quot;Emmanuelle tu peux regarder le &quot;C'est pas Sorcier&quot; sur l'''écroulation'' !&quot; (= l'Effondrement = le Réchauffement Climatique)
+* j'ai explosé en carnage !
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -16740,7 +16757,7 @@ http://liens.howtommy.net/?Be1gEQ
 
 </pre>
 </div>
-<div created="20220511172245331" modified="20230112173302395" tags="" title="prénoms">
+<div created="20220511172245331" modified="20230329080441272" tags="" title="prénoms">
 <pre>! androgynes
 * ''Cassandre''
 * ''Dominique''
@@ -16765,6 +16782,7 @@ http://liens.howtommy.net/?Be1gEQ
 * Olympe
 * Prudence
 * Anaël
+* Bénédicte
 
 ! brainstorm masculin S&amp;J
 * S: Lancelot
@@ -16965,7 +16983,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20230310142558942" tags="core" title="pw">
+<div created="20190130144059269" modified="20230324121801812" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17097,7 +17115,7 @@ paybyphone.fr =&gt; paybyphone.s.le@xn 721
 gameontabletop =&gt; sa.le@yc 721
 laposte.fr =&gt; sa.le@yc 821
 erdnasemagicstore.io erdnasemagicstore.s.le@xnE821
-sncf/ter =&gt; sa.le@yc s421
+sncf/ter =&gt; sa.le@yc s323
 discord =&gt; sa.le@yc921
 zbigz.com =&gt; osefgrrla 122
 www3.yggtorrent.re =&gt; rcghgzms (122) / mail.com
