--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9644,12 +9644,12 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
     }
 }</pre>
 </div>
-<div created="20190108105342821" modified="20230213174246325" title="$:/DefaultTiddlers">
+<div created="20190108105342821" modified="20230406140937688" title="$:/DefaultTiddlers">
 <pre>&quot;si demain je meurs&quot;
 &quot;shadowrun ideas&quot;
-&quot;achats amazon / leclerc / leboncoin&quot;
+&quot;buy achats amazon / leclerc / leboncoin&quot;
 &quot;vater td&quot;
-&quot;fulgurances&quot;
+&quot;fulgurances / épiphanies&quot;
 &quot;current bookmarks&quot;
 DecomissionPcTt
 &quot;daily routine à inclure&quot;
@@ -10114,8 +10114,8 @@ pw
 <div created="20210313142530656" modified="20230201085449943" title="$:/state/encrypt">
 <pre></pre>
 </div>
-<div created="20230104143339124" modified="20230213174252805" title="$:/state/folded/$:/ControlPanel">
-<pre>hide</pre>
+<div created="20230104143339124" modified="20230406140902301" title="$:/state/folded/$:/ControlPanel">
+<pre>show</pre>
 </div>
 <div created="20230104133644598" modified="20230112163906568" title="$:/state/folded/achats amazon / leclerc / leboncoin">
 <pre>show</pre>
@@ -10195,7 +10195,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230404164243502" list="[[Books / livres]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230404164435381" title="$:/StoryList">
+<div created="20230406140847848" list="[[fulgurances / épiphanies]] [[buy achats amazon / leclerc / leboncoin]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230406140926919" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10249,11 +10249,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -10264,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230404164433935" title="$:/temp/search">
-<pre>book</pre>
+<div created="20190114084246125" modified="20230406140925030" title="$:/temp/search">
+<pre>fulg</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
